# opencosts

./: .dockerignore  .env  .env.example  .env.prod  .gitignore  DEPLOYMENT-CONTAINERS.md  DEPLOYMENT.md  Makefile  README.md  all_models_combined.json  main.py  model_strings.txt  models.json  models_deepseek_r1.json  models_gemini_2_5.json  models_kimi_k2.json  models_opus_4.json  models_sonnet_4.json  pyproject.toml
.clinerules/: project_structure.md  projectgoals.txt  readme-structure.md  tooling-rules-compact.md
data/input/: models_strings.txt
data/output/: openrouter_models_providers.csv
docker/: Caddyfile  Caddyfile.system  Dockerfile.backend  Dockerfile.frontend  docker-compose.prod.yml  docker-compose.yml  nginx.conf
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: openrouter_models_providers.csv
frontend/src/: App.tsx
frontend/src/components/common/: AuthorCard.tsx  ModelCard.tsx  ModelComparisonCard.tsx  ProviderTable.tsx
frontend/src/services/: api.ts  priceUtils.ts
scripts/: add-to-system-caddy.sh  daily-scrape.sh  manual-caddy-deployment.md  run.sh  setup-caddy.sh  setup-cron.sh  test-caddy-config.sh
src/: api.py  main.py
src/opencosts/: scraper.py
src/opencosts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
