[project]
name = "opencosts"
version = "0.1.0"
description = "A scraper for OpenRouter model costs."
authors = [{ name = "Cline", email = "cline@example.com" }]
dependencies = [
    "requests",
    "fastapi",
    "uvicorn[standard]",
    "beautifulsoup4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
